--- a/src/App.css
+++ b/src/App.css
@@ -49,23 +49,13 @@ li, a, button{
 }
 #title{
   color:white;
+  background-color: #06b6d4;
   display:flex;
   justify-content: center;
   font-size: 100px;
   font-weight: 700;
   padding: 100px 5px;
-}
-#products{
-
-}
-.product-card{
-  display:flex;
-  background-color:#22d3ee;
-  height: 350px;
-  width: 300px;
-  border: none;
-  border-radius: 40px;
-  flex-direction: column;
+  height: 30vh;
 }
 .fancy > .letter{
   display: inline-block;
@@ -97,4 +87,106 @@ li, a, button{
 }
 .fancy:hover > .letter:nth-child(15){
   transform: translate(140%,-40%) rotate(13deg);
+}
+#products{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin-top:100px;
+}
+.pc-ctn{
+  position:relative;
+  display:flex;
+  justify-content:space-around;
+  align-items:center;
+  width:1000px;
+}
+.pc-ctn .product-card{
+  position: relative;
+  width: 330px;
+  height: 250px;
+  background: #000;
+  border: #0e7490 solid 5px;
+}
+.pc-ctn .product-card .p-i-ctn{
+  position: absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+}
+.pc-ctn .product-card .p-i-ctn img{
+  position: absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  object-fit:cover;
+}
+.pc-ctn .product-card .textbox-ctn{
+  position:absolute;
+  top:40px;
+  bottom: 40px;
+  right: 40px;
+  left: -50px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  background: #22d3ee;
+  transition: transform 0.5s;
+  transform-origin: right;
+  transform: scaleX(0);
+}
+.pc-ctn .product-card:hover .textbox-ctn{
+  transition: transform 0.5s;
+  transform-origin: left;
+  transform: scaleX(1);
+}
+.pc-ctn .product-card .textbox-ctn .textbox{
+  position: relative;
+  padding: 20px 60px;
+  opacity:0;
+}
+.pc-ctn .product-card:hover .textbox-ctn .textbox{
+  opacity: 1;
+  transition: 0.5s;
+  transition-delay: 0.5s;
+}
+.pc-ctn .product-card .textbox-ctn .textbox h2{
+  color: #fff;
+  font-size: 50px;
+  font-weight:700;
+  margin-bottom: 10px;
+  align-self: center;
+}
+.pc-ctn .product-card .textbox-ctn .textbox p{
+  color: #fff;
+  font-weight:300;
+  align-self: center;
+}
+.first{
+  position:absolute;
+  top: -200px;
+  left: 100px;
+}
+.second{
+  position:absolute;
+  top: -170px;
+  left: 100px;
+}
+.third{
+  position:absolute;
+  top: -170px;
+  left: 100px;
+}
+.sold{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.number-s{
+  background-color:#3f3f46;
+  padding: 0 20px;
+  color:#06b6d4;
 }
